fix(modal): shifted up on small screen

--- a/packages/carbon-web-components/src/components/modal/modal.scss
+++ b/packages/carbon-web-components/src/components/modal/modal.scss
@@ -33,6 +33,10 @@
   }
 
   .#{$prefix}--modal-container {
+    transform: translate3d(0, 0, 0);
+  }
+
+  .#{$prefix}--modal-container {
     @include carbon--breakpoint(md) {
       ::slotted(#{$prefix}-modal-header),
       ::slotted(#{$prefix}-modal-body) {
@@ -82,6 +86,10 @@
 
   @media screen and (prefers-reduced-motion: reduce) {
     transition: none;
+  }
+
+  .#{$prefix}--modal-container {
+    transform: translate3d(0, 0, 0);
   }
 }
 
